--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "dependencies": {
     "htmlparser2": "^6.0.1",
-    "node-html-parser": "^3.1.2"
+    "node-html-parser": "^3.1.2",
+    "yaml": "^2.0.0-4"
   },
   "devDependencies": {}
 }
